--- a/appinfo.json
+++ b/appinfo.json
@@ -1,7 +1,8 @@
 {
     "appKeys": {
         "connected": 1,
-        "percent": 0
+        "percent": 0,
+        "print_time_left": 2
     },
     "capabilities": [
         "configurable"
