--- a/appinfo.json
+++ b/appinfo.json
@@ -1,9 +1,9 @@
 {
     "appKeys": {
-        "connected": 1,
-        "current_state": 3,
+        "current_state": 1,
         "percent": 0,
-        "print_time_left": 2
+        "print_time_left": 2,
+        "update": 3
     },
     "capabilities": [
         "configurable"
